--- a/src/main/webapp/css/style2.css
+++ b/src/main/webapp/css/style2.css
@@ -44,9 +44,11 @@ body {
 	margin-top:5px;
 	width: 100%;
 	height: 50px;
-	position: absolute;
+	position: fixed;
 	top: 11px;
 	left: 18px;
+	
+	z-index:2;
 }
 
 .nav {
@@ -187,67 +189,7 @@ cursor: pointer;
   top: 5040px; /* 이동할 거리 값 */
   z-index: 1;
 }
-.footer{
-  width:100%;
-  height:310px;
-  background: url("../images/footer.svg");
-  background-repeat: no-repeat;
-  background-position: left center;
-  background-size: cover;/* 가로,가로,세로,세로 */
-  position: absolute;
-  top: 5930px; /* 이동할 거리 값 */
-/*   z-index: 1; */
-  display:flex;
-  
-}
-.footer1{
-  width:470px;
-  height:100%;
-/* 	border-style:2px solid white; */
-}
-.footer2{
-	flex: 1; /* 빈 공간 차지하도록 flex-grow 사용 */
-  width:calc(100%-470px);
-  height:100%;
-/* 	border:2px solid white; */
-	 justify-content: center;
-	 display: flex;
-}
-.footer_text {
-/* 	border:2px solid white; */
-	width:60%;
-	height:100%;
-	display:flex;
-	}
-.footer_part{
-	left:0;
-	width:calc(100%/3);
-	flex: 1;
-  display: flex;
-/*   flex-direction: column; */
-  align-items: center;
-  justify-content: center;
-}
 
-.footer_text > div>ol > li{
-  line-height: 100%;
-  color:white;
-  list-style:none;
-  font-size: 25px;
-  font-weight:bold;
-  text-align:center;
-  font-family: Helvetica Rounded;
-  cursor: pointer;
-}
-.footer_text > div> ol > li>ul>li {
-  list-style: none;
-  line-height: 1.8;
-  margin-bottom: 0px;
-  font-weight: lighter;
-  font-size: 18px;
-  text-align: center;
-  font-family:  none;
-}
 
 
 
@@ -321,115 +263,82 @@ cursor: pointer;
   line-height:50px;
   cursor: pointer;
 }
-
-/* .v73_40 { */
-/*   top: 25%; */
-/* } */
-
-/* .BookDemo1 span, */
-/* .LearnMore span { */
-/*   display: inline-block; */
-/*   vertical-align: middle; */
-/*   line-height: 1.2; */
-/* } */
-
-
-/* .v73_37 {
-	width: 188px;
-	height: 121px;
+.footer {
+	width: 100%;
+	height: 310px;
+	background: url("../images/footer.svg");
 	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	opacity: 1;
+	background-position: left center;
+	background-size: cover; /* 가로,가로,세로,세로 */
 	position: absolute;
-	top: 740px;
-	left: 866px;
-	overflow: hidden;
+	/*   z-index: 1; */
+	display: flex;
+	bottom:0;
 }
 
-.v73_38 {
-	width: 187px;
-	height: 50px;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	opacity: 1;
-	position: relative;
-	top: 0px;
-	left: 0px;
-	overflow: hidden;
+.footer1 {
+	width: 470px;
+	height: 100%;
+	/* 	border-style:2px solid white; */
 }
 
-.v73_39 {
-	width: 187px;
-	height: 50px;
-	background: linear-gradient(rgba(105, 255, 225, 1),
-		rgba(33, 241, 255, 1));
-	opacity: 1;
-	position: relative;
-	top: 0px;
-	left: 0px;
-	border-top-left-radius: 25px;
-	border-top-right-radius: 25px;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-	overflow: hidden;
+.footer2 {
+	flex: 1; /* 빈 공간 차지하도록 flex-grow 사용 */
+	width: calc(100% -470px);
+	height: 100%;
+	/* 	border:2px solid white; */
+	justify-content: center;
+	display: flex;
 }
 
-.v73_40 {
-	width: 103px;
-	color: rgba(30, 30, 30, 1);
-	position: absolute;
-	top: 14px;
-	left: 43px;
-	font-family: Helvetica Rounded;
-	font-weight: Bold;
-	font-size: 18px;
-	opacity: 1;
+.footer_text {
+	/* 	border:2px solid white; */
+	width: 60%;
+	height: 100%;
+	display: flex;
+}
+
+.footer_part {
+	left: 0;
+	width: calc(100%/ 3);
+	flex: 1;
+	display: flex;
+	/*   flex-direction: column; */
+	align-items: center;
+	justify-content: center;
+}
+.footer_text>div>ol> li> ul {
+	margin-top:23px;
+	}
+
+.footer_text>div>ol>li {
+	line-height: 100%;
+	color: white;
+	list-style: none;
+	font-size: 25px;
+	font-weight: bold;
 	text-align: center;
-}
-
-.v73_41 {
-	width: 187px;
-	height: 50px;
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	opacity: 1;
-	position: absolute;
-	top: 71px;
-	left: 1px;
-	overflow: hidden;
-}
-
-.v73_42 {
-	width: 187px;
-	height: 50px;
-	background: linear-gradient(rgba(105, 255, 225, 1),
-		rgba(33, 241, 255, 1));
-	opacity: 1;
-	position: relative;
-	top: 0px;
-	left: 0px;
-	border: 1px solid linear-gradient(rgba(105, 255, 225, 1),
-		rgba(33, 241, 255, 1));
-	border-top-left-radius: 25px;
-	border-top-right-radius: 25px;
-	border-bottom-left-radius: 25px;
-	border-bottom-right-radius: 25px;
-	overflow: hidden;
-}
-
-.v73_43 {
-	width: 146px;
-	color: rgba(34, 242, 255, 1);
-	position: absolute;
-	top: 13px;
-	left: 21px;
 	font-family: Helvetica Rounded;
-	font-weight: Bold;
+	cursor: pointer;
+}
+
+.footer_text>div>ol>li>ul>li {
+	list-style: none;
+	line-height: 1.8;
+	margin-bottom: 0px;
+	font-weight: lighter;
 	font-size: 18px;
-	opacity: 1;
 	text-align: center;
-} */
+	font-family: none;
+}
+.footer_text>div>ol>li>ul>li>a {
+	list-style: none;
+	line-height: 1.8;
+	margin-bottom: 0px;
+	font-size: 18px;
+	font-family: Helvetica Rounded;
+	text-align: center;
+	font-family: none;
+	color:white;
+}
 </style>
