--- a/src/main/webapp/css/about.css
+++ b/src/main/webapp/css/about.css
@@ -1,56 +1,62 @@
 @charset "UTF-8";
 
-<style>
-* {
+<style>* {
 	box-sizing: border-box;
 }
-ol,ul,li {
+
+ol, ul, li {
 	margin: 0;
-  padding: 0;
+	padding: 0;
 }
+
 a {
-  text-decoration: none;
-  color: black;
+	text-decoration: none;
+	color: black;
 }
+
 a:visited {
-  color: black;
+	color: black;
 }
 
 @font-face {
-  font-family: Helvetica Rounded;
-  src: url('../font/helvetica.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+	font-family: Helvetica Rounded;
+	src: url('../font/helvetica.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
+
 body {
 	font-size: 14px;
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 }
 
 .container {
 	width: 1920px;
-	height: 6240px;
+	height: 3275px;
 	background: url("../images/about/About_bg.svg");
 	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: cover;
-	opacity: 1;
+/* 	background-position: center center; */
+	background-size: auto;
+	/* 	opacity: 1; */
 	position: relative;
 	top: 0px;
 	left: 0px;
 	overflow: hidden;
 }
-
-
 .navbar {
-	margin-top:5px;
+	margin-top: 15px;
 	width: 100%;
 	height: 50px;
-	position: absolute;
-	top: 11px;
-	left: 18px;
-	margin-bottom:5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+		position: sticky;
+		z-index:4;
+	/* 	top: 11px; */
+	/* 	left: 18px; */
+
+	/* 	margin-bottom:5px; */
 }
 
 .nav {
@@ -60,7 +66,7 @@ body {
 		rgba(42, 42, 42, 0.4000000059604645));
 	background-repeat: no-repeat;
 	opacity: 1;
-	position: relative;
+	position: fixed;
 	border-top-left-radius: 50px;
 	border-top-right-radius: 50px;
 	border-bottom-left-radius: 50px;
@@ -81,166 +87,290 @@ body {
 	overflow: hidden;
 	cursor: pointer;
 }
-.logo img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-cursor: pointer;
 
+.logo img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	cursor: pointer;
 }
+
 .buttons {
-  display: flex;
-  justify-content: flex-end;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 10px;
+	display: flex;
+	justify-content: flex-end;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 10px;
 }
 
 .Employers {
-  float:right;
-  width: auto;
-  color: rgba(255, 255, 255, 1);
-  font-family: Helvetica Rounded;
-/*   font-weight: Bold; */
-  font-size: 19px;
-  opacity: 1;
-  text-align: center;
-  margin-right: 24px;
-  line-height: 34px;
-  cursor: pointer;
+	float: right;
+	width: auto;
+	color: rgba(255, 255, 255, 1);
+	font-family: Helvetica Rounded;
+	/*   font-weight: Bold; */
+	font-size: 19px;
+	opacity: 1;
+	text-align: center;
+	margin-right: 24px;
+	line-height: 34px;
+	cursor: pointer;
 }
 
 .About {
-  float:right;
-  width: auto;
-  color: rgba(255, 255, 255, 1);
-  font-family: Helvetica Rounded;
-/*   font-weight: Bold; */
-  font-size: 19px;
-  opacity: 1;
-  text-align: center;
-  margin-right: 24px;
-  line-height: 34px;
-  cursor: pointer;
+	float: right;
+	width: auto;
+	color: rgba(255, 255, 255, 1);
+	font-family: Helvetica Rounded;
+	/*   font-weight: Bold; */
+	font-size: 19px;
+	opacity: 1;
+	text-align: center;
+	margin-right: 24px;
+	line-height: 34px;
+	cursor: pointer;
 }
 
 .BookDemo {
-  float:right;
-  width: 148px;
-  height: 34px;
-  color: rgba(30, 30, 30, 1);
-  background: linear-gradient(rgba(105, 255, 225, 1), rgba(33, 241, 255, 1));
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  line-height: auto;
-  font-family: Helvetica Rounded;
-/*   font-weight: Bold; */
-  font-size: 19px;
-  opacity: 1;
-  text-align: center;
-  line-height: 34px;
+	float: right;
+	width: 148px;
+	height: 34px;
+	color: rgba(30, 30, 30, 1);
+	background: linear-gradient(rgba(105, 255, 225, 1),
+		rgba(33, 241, 255, 1));
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+	border-bottom-left-radius: 25px;
+	border-bottom-right-radius: 25px;
+	line-height: auto;
+	font-family: Helvetica Rounded;
+	/*   font-weight: Bold; */
+	font-size: 19px;
+	opacity: 1;
+	text-align: center;
+	line-height: 34px;
 }
-.part1{
-	width:100%;
-	height:760px;
-	background: url("../images/about/part1.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
-	background-size: auto;/* 가로,가로,세로,세로 */
-	  position: relative;
-/* 	  border:1px solid white; */
+
+.part1 {
+	width: 100%;
+	height: 660px;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	/* 	background-repeat: no-repeat; */
+	/* 	background-position: center center; */
+	/* 	background-size: auto; 가로,가로,세로,세로 */
 }
-.part2{
-	width:100%;
-	height:800px;
-  background-repeat: no-repeat;
-  background-position: center center;
-	background-size: auto;/* 가로,가로,세로,세로 */
-  position: relative;
-  top: 0;
-  display:flex;justify-content:center; 
+
+p {
+	font-size: 60px;
+	/* line-height: 100%; */
+	color: #FFB622;
+	text-align: center;
+	font-family: Helvetica Rounded;
+	margin: 0;
+	width: auto;
 }
+
+.p1_s1>div {
+	font-size: 22px;
+	color: white;
+	text-align: center;
+	font-family: Helvetica Regular;
+	font-weight: bold;
+	margin-top: 35px;
+	line-height: 140%;
+}
+
+.p1_s1 {
+	width: 728px;
+	float: left;
+}
+
+.p1_s2 {
+	margin-left: 200px;
+	width: 728px;
+	float: left;
+	width: 728px;
+}
+
+.part2 {
+	width: 100%;
+	height: 1010px;
+	position: relative;
+	display: flex;
+	justify-content: right;
+	align-items: center;
+	right: 130px;
+	/* 	background-repeat: no-repeat; */
+	/* 	background-position: center center; */
+	/* 	background-size: auto; 가로,가로,세로,세로 */
+}
+
 .part2 img {
-  max-width: auto;
-  height: auto;
-  margin: auto;
-  display: block;
+	max-width: auto;
+	height: auto;
+	margin: auto;
+	display: block;
 }
 
+.part3 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top:150px;
+}
 
-.footer{
-  width:100%;
-  height:310px;
-  background: url("../images/footer.svg");
-  background-repeat: no-repeat;
-  background-position: left center;
-  background-size: cover;/* 가로,가로,세로,세로 */
-  position: absolute;
-  top: 5930px; /* 이동할 거리 값 */
-/*   z-index: 1; */
-  display:flex;
-  
+.p3_b {
+	width: 1026px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
-.footer1{
-  width:470px;
-  height:100%;
-/* 	border-style:2px solid white; */
+
+.p3_b>img {
+	width: 1026px;
 }
-.footer2{
+
+.p3_s {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 100px;
+}
+/* 텍스트 + 사진 */
+.p3_s1 {
+	margin-right: 50px;
+	margin-left: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%;
+}
+
+.intro {
+	background-color: rgba(255, 255, 255, 0.05);
+	height: 90px;
+	width: 285px;
+	border-radius: 30px;
+	box-shadow: 0 4px 7px -4px black;
+	margin-top:60px;
+}
+
+.intro_sub {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100%; /* 높이를 100%로 설정하여 부모 요소의 높이와 같게 만듭니다. */
+	line-height: 40px;
+}
+
+.intro>div>div:nth-child(1) {
+	color: white;
+	font-size: 20px;
+	font-family: Helvetica Regular;
+	text-align: center;
+	font-family: Helvetica Regular;
+	font-weight: bold;
+}
+
+.intro>div>div:nth-child(2) {
+	color: #FF7940;
+	font-size: 25px;
+	font-family: Helvetica Regular;
+	text-align: center;
+	font-family: Helvetica Regular;
+	font-weight: bold;
+	vertical-align: middle;
+}
+
+.footer {
+	width: 100%;
+	height: 310px;
+	background: url("../images/footer.svg");
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: cover; /* 가로,가로,세로,세로 */
+	position: absolute;
+	/*   z-index: 1; */
+	display: flex;
+	bottom:0px;
+}
+
+.footer1 {
+	width: 470px;
+	height: 100%;
+	/* 	border-style:2px solid white; */
+}
+
+.footer2 {
 	flex: 1; /* 빈 공간 차지하도록 flex-grow 사용 */
-  width:calc(100%-470px);
-  height:100%;
-/* 	border:2px solid white; */
-	 justify-content: center;
-	 display: flex;
+	width: calc(100% -470px);
+	height: 100%;
+	/* 	border:2px solid white; */
+	justify-content: center;
+	display: flex;
 }
+
 .footer_text {
-/* 	border:2px solid white; */
-	width:60%;
-	height:100%;
-	display:flex;
-	}
-.footer_part{
-	left:0;
-	width:calc(100%/3);
+	/* 	border:2px solid white; */
+	width: 60%;
+	height: 100%;
+	display: flex;
+}
+
+.footer_part {
+	left: 0;
+	width: calc(100%/ 3);
 	flex: 1;
-  display: flex;
-/*   flex-direction: column; */
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	/*   flex-direction: column; */
+	align-items: center;
+	justify-content: center;
+}
+.footer_text>div>ol> li> ul {
+	margin-top:23px;
+	}
+
+.footer_text>div>ol>li {
+	line-height: 100%;
+	color: white;
+	list-style: none;
+	font-size: 25px;
+	font-weight: bold;
+	text-align: center;
+	font-family: Helvetica Rounded;
+	cursor: pointer;
 }
 
-.footer_text > div>ol > li{
-  line-height: 100%;
-  color:white;
-  list-style:none;
-  font-size: 25px;
-  font-weight:bold;
-  text-align:center;
-  font-family: Helvetica Rounded;
-  cursor: pointer;
+.footer_text>div>ol>li>ul>li {
+	list-style: none;
+	line-height: 1.8;
+	margin-bottom: 0px;
+	font-weight: lighter;
+	font-size: 18px;
+	text-align: center;
+	font-family: none;
 }
-.footer_text > div> ol > li>ul>li {
-  list-style: none;
-  line-height: 1.8;
-  margin-bottom: 0px;
-  font-weight: lighter;
-  font-size: 18px;
-  text-align: center;
-  font-family:  none;
-}
-
-
-
-
-.margin0{
-	margin:0;
+.footer_text>div>ol>li>ul>li>a {
+	list-style: none;
+	line-height: 1.8;
+	margin-bottom: 0px;
+	font-size: 18px;
+	font-family: Helvetica Rounded;
+	text-align: center;
+	font-family: none;
+	color:white;
 }
 
-
-
-
+.margin0 {
+	margin: 0;
+}
 </style>
